--- a/src/static/style/global.scss
+++ b/src/static/style/global.scss
@@ -1,12 +1,16 @@
 @import "login.scss";
 @import "nav.scss";
+@import "link.scss";
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.ant-btn-primary{
+.ant-btn-primary, .ant-switch-checked{
     background-color: #6499E9!important;
+}
+.ant-switch{
+    background-color: #eee;
 }
 
 :root {
