add global loading

--- a/src/static/style/global.scss
+++ b/src/static/style/global.scss
@@ -27,6 +27,8 @@
 }
 
 body {
+    height: 100vh;
+    overflow: hidden;
     color: rgb(var(--foreground-rgb));
     background: linear-gradient(
             to bottom,
