--- a/src/static/style/global.scss
+++ b/src/static/style/global.scss
@@ -36,4 +36,26 @@ body {
             rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    ::-webkit-scrollbar {
+        width: 6px;
+        height: 6px;
+    }
+    ::-webkit-scrollbar-track {
+        border-radius: 3px;
+        background: rgba(0,0,0,0.06);
+        -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.08);
+    }
+    /* 滚动条滑块 */
+    ::-webkit-scrollbar-thumb {
+        border-radius: 3px;
+        background: rgba(0,0,0,0.12);
+        -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
+    }
+}
+
+.app-content{
+    margin: 84px 16px 0;
+    padding: 24px;
+    height: calc(100vh - 100px);
+    overflow-y: scroll;
 }
