--- a/src/static/style/global.scss
+++ b/src/static/style/global.scss
@@ -42,7 +42,7 @@ body {
 
 .app-content{
     margin: 70px 0 0 5px;
-    padding: 0 14px;
+    padding: 14px;
     height: calc(100vh - 100px);
     overflow-y: scroll;
 }
