--- a/src/static/style/global.scss
+++ b/src/static/style/global.scss
@@ -57,7 +57,7 @@ body {
     box-shadow: rgba(7, 17, 27, 0.1) 0 4px 5px 0
 }
 .card-bg{
-    background-image: linear-gradient(-225deg, #FFFEFF 0%, #D7FFFE 100%);
+    background-image: linear-gradient(-225deg, #FFFEFF 0%, #f0fbff 100%);
 }
 canvas{
     background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
