修改手机屏幕适配

--- a/src/static/style/loading.scss
+++ b/src/static/style/loading.scss
@@ -17,6 +17,12 @@
     border: 1px solid rgba(255, 255, 255, 0.4);
   }
 
+  @media (max-width: 390px) {
+    .loading {
+      left: 40%;
+    }
+  }
+
   .loading:before {
     position: absolute;
     left: 1px;
