--- a/src/static/style/global.scss
+++ b/src/static/style/global.scss
@@ -43,8 +43,11 @@ body {
 
 .app-content{
     margin: 60px 0 0 5px;
-    height: calc(100vh - 45px);
+    height: calc(100vh - 65px);
     flex-direction: column;
+    align-items: center;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 .ant-layout{
