--- a/src/static/style/global.scss
+++ b/src/static/style/global.scss
@@ -49,7 +49,11 @@ body {
     overflow-x: hidden;
     overflow-y: scroll;
 }
-
+@media (max-width: 768px) {
+    .app-content {
+        height: calc(100vh - 300px);
+    }
+}
 .ant-layout{
     background-color: transparent!important;
 }
