edit cursor pointer

--- a/src/static/style/global.scss
+++ b/src/static/style/global.scss
@@ -82,3 +82,9 @@ canvas{
         align-items: center;
     }
 }
+body,a,.pointer{
+    cursor:url(../images/pointer.cur),default;
+}
+input:hover {
+    cursor:url(../images/input.cur),text;
+}
